# omnicrack

./: .gitignore  AGENT_CONTEXT.md  ARCHITECTURE.md  README.md  ROADMAP.md  debug_id.py  identifier_output.txt  pyproject.toml
src/omnicrack/: docker.py  hardware.py  identifier.py  logic.py  main.py  pcap.py  session.py
tests/: conftest.py  test_docker.py  test_hardware.py  test_identifier.py  test_logic.py  test_main.py  test_pcap.py  test_session.py
